BV-121 - Look into using Gradle for future project Since we can't use Gradle nicely with IntelliJ, make project adhere to Ivy conventions for multiproject builds.  - Pull out common parts of build scripts into shared.xml  - Make the researchTool module depend on the validation module through ivy so IntelliJ will pick up dependencies.  - Publish validation.jar to local Ivy repository so it can be retrieved along with other dependencies.