@@ -1,8 +1,9 @@
-<project name="Research Tool" xmlns:ivy="antlib:org.apache.ivy.ant" default="create-plugin" basedir=".">
+<project name="Research Tool" default="create-plugin" basedir=".">
+    <import file="../shared.xml"/>
 
     <property name="version-regex-pattern" value=".*PLUGIN_VERSION\s+=\s+&quot;(\d+\.\d+\.\d+)&quot;;.*"/>
 
-    <loadfile property="plugin.version" srcfile="src/com/biomatters/plugins/barcoding/validator/research/BarcodeValidatorPlugin.java">
+    <loadfile property="plugin.version" srcfile="${researchTool}/src/com/biomatters/plugins/barcoding/validator/research/BarcodeValidatorPlugin.java">
         <filterchain>
             <linecontainsregexp>
                 <regexp pattern="${version-regex-pattern}"/>
@@ -18,162 +19,37 @@
 
     <property name="validation-name" value="com.biomatters.plugins.barcoding.validator.research.validation"/>
 
-    <!-- setup reference to the Ivy Ant tasks library -->
-    <path id="ivy.lib.path">
-        <fileset dir="tools" includes="ivy*.jar"/>
-    </path>
-
-    <taskdef resource="org/apache/ivy/ant/antlib.xml" uri="antlib:org.apache.ivy.ant" classpathref="ivy.lib.path"/>
-
-    <!-- load ivy settings -->
-    <ivy:settings file="ivysettings.xml" id="biocode.ivy.config"/>
-
-    <!-- folders -->
-    <property name="src" location="src"/>
-    <property name="classes" location="classes"/>
-    <property name="build" location="build"/>
-    <property name="lib" location="lib"/>
-    <property name="test" location="test"/>
-    <property name="test-classes" location="test-classes"/>
-    <property name="junit" location="junit"/>
-    <property name="report" location="report"/>
-    <property name="geneious-runtime-dependencies" location="GeneiousFiles"/>
-
-    <!-- validation paths -->
-    <property name="validation-base-dir" location="../validation"/>
-    <property name="validation-ant-file" location="${validation-base-dir}/build.xml"/>
-    <property name="validation-build" location="${validation-base-dir}/build"/>
-    <property name="validation-jar" location="${validation-build}/${validation-name}.jar"/>
-
-    <path id="classpath">
-        <fileset dir="${lib}"/>
-    </path>
-
-
-
-    <target name="create-plugin" depends="build-plugin">
-        <copy file="${validation-jar}" todir="${build}/${plugin-name}"/>
-        <zip zipfile="${build}/${short-plugin-name}.gplugin">
-            <fileset dir="${build}"/>
-        </zip>
-    </target>
-
-
-
-    <target name="run-tests" depends="compile-tests, retrieve-geneious-runtime-dependencies">
-        <junit dir="GeneiousFiles" fork="true" maxmemory="1024M" printsummary="on" timeout="180000">
-            <batchtest todir="${report}">
-                <fileset dir="${test-classes}">
-                    <include name="**/*Test.class"/>
-                </fileset>
-            </batchtest>
-            <classpath>
-                <path refid="classpath"/>
-                <file file="${geneious-runtime-dependencies}/iSeek.jar"/>
-                <fileset dir="${geneious-runtime-dependencies}/lib"/>
-                <pathelement location="${classes}"/>
-                <pathelement location="${test-classes}"/>
-                <pathelement location="${geneious-runtime-dependencies}/resources"/>
-                <pathelement location="${geneious-runtime-dependencies}/bundledPlugins"/>
-            </classpath>
-            <env key="DISPLAY" value=":0.0"/>
-            <env key="DYLD_LIBRARY_PATH" value="/Library/Application Support/Geneious/Frameworks"/>
-            <jvmarg value="-Xms256M"/>
-            <jvmarg value="-ea"/>
-            <jvmarg value="-XX:MaxNewSize=40M"/>
-            <jvmarg value="-XX:MaxPermSize=256M"/>
-            <jvmarg value="-XX:ReservedCodeCacheSize=128m"/>
-            <jvmarg value="-Xss512K"/>
-            <formatter type="brief" usefile="false"/>
-            <sysproperty key="report.dir" value="${report}"/>
-        </junit>
-    </target>
-
-
-
-    <target name="build-plugin" depends="compile-plugin">
+    <target name="build-module" depends="compile-module">
         <mkdir dir="${build}/${plugin-name}"/>
         <copy todir="${build}/${plugin-name}">
-            <fileset dir="resources"/>
+            <fileset dir="${resources}"/>
         </copy>
+        <unzip dest="${build}/${plugin-name}">
+            <fileset dir="${basedir}">
+                <include name="*.zip"/>
+            </fileset>
+        </unzip>
         <copy todir="${build}/${plugin-name}">
-            <fileset dir="${validation-base-dir}/resources"/>
+            <fileset dir="lib">
+                <exclude name="GeneiousPublicAPI-*.jar"/>
+                <exclude name="jdom-*.jar"/>
+                <exclude name="jebl-*.jar"/>
+                <exclude name="junit-*.jar"/>
+            </fileset>
         </copy>
         <jar jarfile="${build}/${plugin-name}/${plugin-name}.jar">
             <fileset dir="${classes}"/>
         </jar>
     </target>
 
-    <target name="compile-plugin" depends="remove-plugin-folders, create-plugin-folders, retrieve-dependencies, build-validation-module">
-        <javac target="1.6" source="1.6" destdir="${classes}" debug="true">
-            <classpath>
-                <path refid="classpath"/>
-                <file file="${validation-jar}"/>
-            </classpath>
-            <src path="${src}"/>
-        </javac>
+    <target name="create-plugin" depends="clean, build-module">
+        <zip zipfile="${build}/${short-plugin-name}.gplugin">
+            <fileset dir="${build}"/>
+        </zip>
     </target>
 
-    <target name="compile-tests" depends="remove-test-folders, create-test-folders, compile-plugin">
-        <javac target="1.6" source="1.6" destdir="${test-classes}" debug="true">
-            <classpath>
-                <path refid="classpath"/>
-                <pathelement location="${classes}"/>
-            </classpath>
-            <src path="${test}"/>
-        </javac>
+    <target name="publish-dependencies">
+        <ant antfile="${validation}/build.xml" target="publish" inheritall="false"/>
     </target>
 
-
-
-    <target name="evaluate-dependencies-exists">
-        <condition property="dependencies.exists">
-            <available file="${lib}" type="dir"/>
-        </condition>
-    </target>
-
-    <target name="evaluate-geneious-runtime-depedencies-exists">
-        <condition property="geneious-runtime-dependencies.exists">
-            <available file="${geneious-runtime-dependencies}" type="dir"/>
-        </condition>
-    </target>
-
-    <target name="retrieve-dependencies" description="Retrieve dependencies with ivy" depends="evaluate-dependencies-exists" unless="dependencies.exists">
-        <ivy:retrieve settingsref="biocode.ivy.config"/>
-    </target>
-
-    <target name="retrieve-geneious-runtime-dependencies" description="Retrieve the Geneious runtime for running the tests" depends="evaluate-geneious-runtime-depedencies-exists" unless="geneious-runtime-dependencies.exists">
-        <ivy:retrieve type="resource" settingsref="biocode.ivy.config" pattern="${basedir}/[artifact].[ext]"/>
-        <unzip src="GeneiousFiles.zip" dest="."/>
-    </target>
-
-
-
-    <target name="create-plugin-folders">
-        <mkdir dir="${classes}"/>
-        <mkdir dir="${build}"/>
-    </target>
-
-    <target name="create-test-folders">
-        <mkdir dir="${test-classes}"/>
-        <mkdir dir="${junit}"/>
-        <mkdir dir="${report}"/>
-    </target>
-
-    <target name="remove-plugin-folders">
-        <delete dir="${classes}"/>
-        <delete dir="${build}"/>
-    </target>
-
-    <target name="remove-test-folders">
-        <delete dir="${test-classes}"/>
-        <delete dir="${junit}"/>
-        <delete dir="${report}"/>
-    </target>
-
-
-
-    <target name="build-validation-module">
-        <ant antfile="${validation-ant-file}" inheritall="false" usenativebasedir="true"/>
-    </target>
 </project>
